--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@
 /* Dark theme  */
 .darktheme {
   --accent: #4b8ec4; /* Hover color */
-  --bg: #19171a; /* Background color */
-  --sbg: #201e21; /* Cards color */
+  --bg: #2E3440; /* Background color */
+  --sbg: #434C5E; /* Cards color */
   --fg: #d8dee9; /* Foreground color */
   --mus: #BF616A; /* Music Icon Color */
   --sfg: #3a3a3a; /* Secondary Foreground color */
