--- a/css/style.css
+++ b/css/style.css
@@ -32,10 +32,10 @@
 
 /* Dark theme  */
 .darktheme {
-  --accent: #4b8ec4; /* Hover color */
+  --accent: #5e81ac; /* Hover color */
   --bg: #2E3440; /* Background color */
-  --sbg: #434C5E; /* Cards color */
-  --fg: #81A1C1; /* Foreground color */
+  --sbg: #3b4252; /* Cards color */
+  --fg: #d8dee9; /* Foreground color */
   --mus: #BF616A; /* Music Icon Color */
   --sfg: #3a3a3a; /* Secondary Foreground color */
   --imgcol: linear-gradient(
